--- a/Prototype/SmartWatch/App.config
+++ b/Prototype/SmartWatch/App.config
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="IoTDataReceiver.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
+    <userSettings>
+        <IoTDataReceiver.Properties.Settings>
+            <setting name="frequency" serializeAs="String">
+                <value>75</value>
+            </setting>
+            <setting name="period" serializeAs="String">
+                <value>240</value>
+            </setting>
+            <setting name="studyCenter" serializeAs="String">
+                <value>AUH-EAAA</value>
+            </setting>
+            <setting name="studyCode" serializeAs="String">
+                <value>TEST</value>
+            </setting>
+        </IoTDataReceiver.Properties.Settings>
+    </userSettings>
 </configuration>
