--- a/Prototype/SmartWatch/SmartWatch.csproj
+++ b/Prototype/SmartWatch/SmartWatch.csproj
@@ -94,7 +94,9 @@
     <Compile Include="IDataConnector.cs" />
     <Compile Include="IDataReceiver.cs" />
     <Compile Include="IObserver.cs" />
+    <Compile Include="IPatientDao.cs" />
     <Compile Include="MyExceptions.cs" />
+    <Compile Include="PatientFileDao.cs" />
     <Compile Include="ProcessAlgorithms.cs" />
     <Compile Include="ListViewDeviceItem.cs" />
     <Compile Include="MyClasses.cs" />
