--- a/Prototype/SmartWatch/SmartWatch.csproj
+++ b/Prototype/SmartWatch/SmartWatch.csproj
@@ -85,15 +85,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataProcessStep.cs" />
-    <Compile Include="DataReceiver.cs" />
+    <Compile Include="IDatabaseConnector.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="DataWindow.xaml.cs">
       <DependentUpon>DataWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DummyDataConnector.cs" />
-    <Compile Include="GeneActivDataConnector.cs" />
+    <Compile Include="DummyDeviceConnector.cs" />
+    <Compile Include="GeneActivDeviceConnector.cs" />
     <Compile Include="HowRYouConnector.cs" />
-    <Compile Include="IDataConnector.cs" />
-    <Compile Include="IDataReceiver.cs" />
+    <Compile Include="IDeviceConnector.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="IDeviceData.cs" />
     <Compile Include="IObserver.cs" />
     <Compile Include="ISettingsDao.cs" />
@@ -104,7 +105,6 @@
     <Compile Include="ListViewDeviceItem.cs" />
     <Compile Include="MyClasses.cs" />
     <Compile Include="PatientService.cs" />
-    <Compile Include="Settings.cs" />
     <Compile Include="SettingsDao.cs" />
     <Compile Include="SettingsService.cs" />
     <Compile Include="SetupWindow.xaml.cs">
