--- a/Prototype/SmartWatch/SmartWatch.csproj
+++ b/Prototype/SmartWatch/SmartWatch.csproj
@@ -85,6 +85,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataProcessStep.cs" />
+    <Compile Include="HowRYouBirgitteConnector.cs" />
     <Compile Include="IDatabaseConnector.cs" />
     <Compile Include="ISettingsService.cs" />
     <Compile Include="IPatientService.cs" />
