Icon, shutting down app after clicking ×

--- a/Prototype/SmartWatch/App.config
+++ b/Prototype/SmartWatch/App.config
@@ -17,10 +17,10 @@
                 <value>240</value>
             </setting>
             <setting name="studyCenter" serializeAs="String">
-                <value>AUH-EAAA</value>
+                <value>AUH</value>
             </setting>
             <setting name="studyCode" serializeAs="String">
-                <value>TEST</value>
+                <value>DRJIA</value>
             </setting>
         </IoTDataReceiver.Properties.Settings>
     </userSettings>
